[package]
name = "tower-sessions-fs-store"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.67"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["fs"] }
tower-sessions = "0.13.0"

[dev-dependencies] # for examples
axum = "0.7.5"
tokio = { version = "1.40.0", features = ["full"] }

[[example]]
name = "based_on_build_mode"
